fix mobile wrapping on claim list header

--- a/ui/scss/themes/light.scss
+++ b/ui/scss/themes/light.scss
@@ -12,7 +12,7 @@
   --color-button-border: var(--color-gray-3);
 
   // Color
-  --color-background: #f9f9f9;
+  --color-background: #fafafa;
   --color-background--splash: #212529;
   --color-border: #ededed;
   --color-background-overlay: #21252980;
